--- a/group196.html
+++ b/group196.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet" /> <!-- Fuente Unicons -->
     <link  rel="preconnect" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     
-  title>GROUP 196 LANDING PAGE</title>
+  <title>GROUP 196 LANDING PAGE</title>
   </head>
   <body>
     <header class="header">
